# ChatHPC-ChatKokkos-SC25

./: .gitignore  1_setup.sh  2_train.sh  3_verify.sh  4_evaluate.sh  5_evaluate_baseline.sh  CHANGELOG.md  README.md  config_initial.json  config_refinement.json  run_all.sh
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .style.rb  CHANGELOG.md  Modelfile  README.md  mkdocs.yml  pyproject.toml  requirements-lock.txt  ruff_defaults.toml
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/docs/: api.md  index.md
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/examples/: .gitignore  example-kokkos-app-run-marimo.py  fine-tune-chat-kokkos-app.ipynb  fine-tune-chat-kokkos.ipynb
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/scripts/: 0_test_training.sh  1_verify_training.sh  2_copy_jupyter_output.sh  full_test.sh  test_commands.sh  version_bump.py
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/scripts/tests/: data_explore.py
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/scripts/utils/: extract_responses.py  verify_app.py
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/src/chathpc/app/: __init__.py  __main__.py  app.py  json_to_markdown.py  json_to_yaml.py  ollama_interface.py  openai_interface.py
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/src/chathpc/app/utils/: common_utils.py  datastore.py  template_utils.py  verify_utils.py
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/tests/: test_app.py  test_preferences.py  test_utils.py
C1_ChatHPC_Lib/ChatHPC-app-v25.4.1/tests/files/: config.json  data-test.json  data-test1.yaml  data-test2.yaml  prompt_template.txt
C2_Kokkos_Dataset/: kokkos_create_context_initial.json  kokkos_create_context_refinement.json  kokkos_testing.yaml
example_evaluation_output/: ChatKokkos_initial_results.json  ChatKokkos_initial_results.md  ChatKokkos_refinement_results.json  ChatKokkos_refinement_results.md  code_llama_base_results.json  code_llama_base_results.md  openai_gpt-4o_base_results.json  openai_gpt-4o_base_results.md  run_all_output.txt
